
[package]
authors = ["Noah Thompson <thompsonnoahe@gmail.com>"]
edition = "2021"
name = "macos_metrics"
version = "0.1.0"

[lib]
crate-type = ["lib","cdylib"]

[dependencies]
core-foundation = "0.10.1"
libc = "0.2.175"
napi = "3.0.0"
napi-derive = "3.0.0"
serde_json = "1.0.143"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
